@@ -1,17 +1,17 @@
 #!/bin/bash
 
-provisioner --scale 4
+set -e
 
-coordinator     --workerVmOptions "-ea -server -Xms2G -Xmx2G -XX:+PrintGC -XX:+HeapDumpOnOutOfMemoryError" \
-                --clientHzFile      ../conf/client-hazelcast.xml \
-                --hzFile            ../conf/hazelcast.xml \
+coordinator     --memberWorkerCount 2 \
+                --workerVmOptions "-ea -server -Xms2G -Xmx2G -verbosegc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -XX:+HeapDumpOnOutOfMemoryError" \
+                --hzFile            hazelcast.xml \
                 --clientWorkerCount 2 \
-                --memberWorkerCount 2 \
+                --clientWorkerVmOptions "-ea -server -Xms2G -Xmx2G -verbosegc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -XX:+HeapDumpOnOutOfMemoryError" \
+                --clientHzFile      client-hazelcast.xml \
                 --workerClassPath   '../target/*.jar' \
                 --duration          5m \
-                ../conf/test.properties
+                --monitorPerformance \
+                test.properties
 
 provisioner --download
-
-provisioner --terminate
 
